# my-chat-ai-comfyui

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HOWTO.md  LICENSE  README.md  cspell.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-precommit.ps1  setup.ps1
.github/workflows/: docs-quality.yml  pre-commit.yml  test-setup.yml
config/: example.env
docs/: API.ja.md  API.md  CHANGELOG.ja.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  HOWTO.ja.md  HOWTO.md  README.ja.md
src/: main.py  setup_comfyui.py  test_comfyui_connection.py
src/chat_interface/: __init__.py  chat_manager.py
src/comfyui_control/: __init__.py  comfyui_client.py
src/intent_processing/: __init__.py  intent_processor.py
src/workflow_engine/: __init__.py  workflow_orchestrator.py
tests/: conftest.py  test_comfyui_client.py  test_intent_processor.py  test_workflow_orchestrator.py
workflows/: basic_generation.json  nsfw_filtered_generation.json
